--- a/client/pages/school/school.sass
+++ b/client/pages/school/school.sass
@@ -11,11 +11,12 @@
       .text-container
         padding: 5px
       .img-container
+        padding: 3px
         width: 100%
         height: 200px
         display: flex
         img
           margin: auto
           display: block
-          //min-height: 200px
+          max-height: 100%
 
