--- a/client/components/themes/main.sass
+++ b/client/components/themes/main.sass
@@ -1,7 +1,9 @@
 @import "client/components/themes/params"
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Serif|Roboto&subset=cyrillic')
 @font-face
-  font-family: "Roboto"
-  src: url("/RobotoCondensed-Regular.ttf")
+  font-family: 'PT Sans Caption'
+  font-weight: normal
+  font-style: normal
 
 html
   footer
@@ -49,7 +51,8 @@ html
       color: white
       background-color: $blue-color
 
-    font-family: Roboto
+    font-family: 'PT Sans Caption'
+
     .content
       max-width: 1400px !important
 
