--- a/client/components/themes/main/menu-top.sass
+++ b/client/components/themes/main/menu-top.sass
@@ -7,8 +7,9 @@
   .navbar-toggler-icon
 
 .top-menu-full
-  h5:first-child
-    margin-left: 0!important
-  h5:last-child
-    margin-right: 0!important
-  //background: #0b2e13
+  margin: 5px 0
+  display: grid
+  grid-template-columns: repeat(8, 1fr)
+  grid-gap: 5px
+  //grid-template-columns: 1fr 1fr 1fr 1fr
+
