--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -1,5 +1,8 @@
 @import "client/components/themes/params"
 .theme-main
+  color: $blue-color
+  a
+    color: $blue-color
   .blue-box
     background-color: $blue-color
     color: whitesmoke
