--- a/client/pages/home/home.sass
+++ b/client/pages/home/home.sass
@@ -9,6 +9,10 @@
       width: 50%
       border: 1px solid #0c5460
       padding: 10px
+    td.colored
+      background: #1bbe74
+      a
+        color: #0b2e13
   .first-news
     margin-bottom: 10px
     .first-news-img
