--- a/client/pages/person/person.sass
+++ b/client/pages/person/person.sass
@@ -39,3 +39,12 @@
     display: block
   .email
     display: block
+
+.person-list
+  .list-wrapper
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    grid-gap: 5px
+    div.person-small
+      margin: auto
+
