--- a/client/pages/school/school.sass
+++ b/client/pages/school/school.sass
@@ -1,10 +1,10 @@
 .school-list
   .list-wrapper
-    display: flex
-    flex-wrap: wrap
-    justify-content: center
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    grid-gap: 5px
     .school-small
-      margin: 5px
+      margin: auto
       border: 1px solid silver
       width: 300px
       height: 300px
