--- a/client/pages/news/post.sass
+++ b/client/pages/news/post.sass
@@ -24,9 +24,12 @@
 
 .post-list
   .list-wrapper
-    display: flex
-    flex-wrap: wrap
-    justify-content: center
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    grid-gap: 5px
+    .post-small
+      margin: auto
+
 .post-small
   box-shadow: 0 10px 30px 0 rgba(0,0,0,.08)
   overflow: hidden
