--- a/views/share.pug
+++ b/views/share.pug
@@ -5,5 +5,5 @@ html
 		meta( data-n-head="true" data-hid="og-description" name="og:description" content=text)
 		meta( data-n-head="true" data-hid="og-image" name="og:image" content=image)
 	body
-		script.
+		//script.
 			document.location.href = '#{url}'
