--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -1,30 +1,50 @@
 @import "client/components/themes/params"
-.theme-main
-  color: $blue-color
-  a
-    color: $blue-color
-  .blue-box
-    background-color: $blue-color
-    color: whitesmoke
+body
+  background: url("/bg.jpg")
+  .theme-main
+    color: black
     a
-      color: whitesmoke
-  img#nikolaev
-    -webkit-transform: scaleX(-1)
-    transform: scaleX(-1)
-  @media screen and (min-width: $min-width)
-    #bottom-info
+      color: black
+    .content
+      background-color: white
+      h2
+        background-color: $blue-color
+        text-align: left !important
+        padding: 5px
+        color: white
+    .menu1
+      margin-bottom: 10px
+      border-bottom: 2px solid gray
+      background-color: white
       display: flex
-      justify-content: space-between
+      justify-content: space-around
       div
-        text-align: left
+        padding: 15px 0
+        font-size: 1.2em
 
-  .partners
-    display: flex
-    @media screen and (max-width: $min-width)
-      flex-wrap: wrap
-    align-content: baseline
-    a
-      margin: auto
-      img
-        max-width: 100px
-        max-height: 100px
+    .blue-box
+      background-color: $blue-color
+      color: whitesmoke
+      a
+        color: whitesmoke
+    img#nikolaev
+      -webkit-transform: scaleX(-1)
+      transform: scaleX(-1)
+    @media screen and (min-width: $min-width)
+      #bottom-info
+        display: flex
+        justify-content: space-between
+        div
+          text-align: left
+
+    .partners
+      background-color: white
+      display: flex
+      @media screen and (max-width: $min-width)
+        flex-wrap: wrap
+      align-content: baseline
+      a
+        margin: auto
+        img
+          max-width: 100px
+          max-height: 100px
