--- a/client/components/themes/main/menu-top.sass
+++ b/client/components/themes/main/menu-top.sass
@@ -7,9 +7,10 @@
   .navbar-toggler-icon
 
 .top-menu-full
-  margin: 5px 0
   display: grid
   grid-template-columns: repeat(8, 1fr)
-  grid-gap: 5px
+  grid-gap: 0px
   //grid-template-columns: 1fr 1fr 1fr 1fr
+  .selected
+    background-color: white
 
