--- a/client/pages/school/school.sass
+++ b/client/pages/school/school.sass
@@ -5,7 +5,7 @@
     grid-gap: 5px
     .school-small
       margin: auto
-      border: 1px solid silver
+      border-bottom: 1px solid silver
       width: 300px
       height: 300px
       .text-container
