--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -1,6 +1,6 @@
 @import "client/components/themes/params"
 body
-  background: url("/bg.jpg")
+  background: url("/uploads/bg.jpg")
   .theme-main
     color: black
     a
