--- a/client/components/search/search-form.sass
+++ b/client/components/search/search-form.sass
@@ -11,7 +11,7 @@
     grid-gap: 10px
 
   .options
-    @media screen and (min-width: $min-width)
+    @media screen and (min-width: $width-main)
       display: grid
       grid-template-columns: repeat(auto-fill, minmax(200px, 1fr))
       grid-gap: 10px
