--- a/client/components/share-button/share-button.sass
+++ b/client/components/share-button/share-button.sass
@@ -2,5 +2,5 @@
 .share-button
   a
     transform: scale(.4)
-    @media screen and (max-width: $min-width)
+    @media screen and (max-width: $width-main)
       transform: scale(.2)
