--- a/client/components/themes/main/menu-top.sass
+++ b/client/components/themes/main/menu-top.sass
@@ -1,3 +1,4 @@
+@import "client/components/themes/params"
 .navbar
   margin-bottom: 0
   .level2
@@ -12,5 +13,7 @@
   grid-gap: 0px
   //grid-template-columns: 1fr 1fr 1fr 1fr
   .selected
-    background-color: white
+    background-color: $blue-color
+    a
+      color: white
 
