--- a/client/components/themes/params.sass
+++ b/client/components/themes/params.sass
@@ -1,5 +1,7 @@
-$min-width: 768px
-$max-width: 768px
-$blue-color: #4a91fd
+$width-main: 1220px
+$width-menu: 300px
+$blue-color: #0f3886
+$blue-color2: #1757d4
 $head-color: #363636
 $text-color: #777
+
