--- a/client/pages/contacts/contacts.sass
+++ b/client/pages/contacts/contacts.sass
@@ -2,12 +2,12 @@
 .contact-row
 
   margin: 20px 0
-  @media screen and (min-width: $min-width)
+  @media screen and (min-width: $width-main)
     display: flex
   justify-content: space-between
 
   .contact-col
-    @media screen and (min-width: $min-width)
+    @media screen and (min-width: $width-main)
       width: 32%
     h3
       text-align: center
