--- a/client/components/file-list/file-list.sass
+++ b/client/components/file-list/file-list.sass
@@ -6,14 +6,14 @@
   display: flex
   flex-wrap: wrap
   flex-direction: column-reverse
-  @media screen and (max-width: $max-width)
+  @media screen and (max-width: $width-main)
     flex-direction: row
   justify-content: center
   .image-cell
     //background-color: silver
     padding: 5px
     margin: 2px
-    @media screen and (max-width: $max-width)
+    @media screen and (max-width: $width-main)
       width: 50%
       margin: 0
     width: 120px
