--- a/client/components/themes/main.sass
+++ b/client/components/themes/main.sass
@@ -14,7 +14,7 @@ html
       max-width: 100%
       max-height: 100%
     h1
-      @media screen and (min-width: $min-width)
+      @media screen and (min-width: $width-main)
         text-align: center
     .top-menu
       background-color: #EEE
