--- a/client/pages/news/post.sass
+++ b/client/pages/news/post.sass
@@ -31,16 +31,12 @@
       margin: auto
 
 .post-small
-  box-shadow: 0 10px 30px 0 rgba(0,0,0,.08)
-  overflow: hidden
-  margin: 12px
-  padding: 10px
-  //font-size: .7em
-  height: 300px
+  .img-wrapper
+    height: 200px
+    overflow: hidden
+  .post-small-content
+    padding: 10px
   @media screen and (max-width: $width-main)
     width: 100%
   .date
     font-size: .7em
-  img
-    max-height: 200px
-    max-width: 80px
