--- a/client/components/themes/main.sass
+++ b/client/components/themes/main.sass
@@ -1,15 +1,21 @@
 @import "client/components/themes/params"
-@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Serif|Roboto&subset=cyrillic')
-@font-face
-  font-family: 'PT Sans Caption'
-  font-weight: normal
-  font-style: normal
+//@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption')
+@import url('https://fonts.googleapis.com/css?family=PT+Sans+Caption|Roboto+Slab|Open+Sans|Stalinist+One:400italic,700italic,400,700')
+$pt-font: 'PT Sans Caption'
+$roboto-slab: 'Roboto Slab', serif
+$open-sans: 'Open Sans', sans-serif
+$stalin: 'Stalinist One'
+
+$main-font: $roboto-slab
+
 
 html
+
   footer
     text-align: center
 
   body
+    font-family: $main-font
     .img-preview
       max-width: 100%
       max-height: 100%
@@ -20,11 +26,6 @@ html
       background-color: #EEE
     .nav-link
       cursor: pointer
-    .goog-te-gadget
-      div
-        border: none
-    .goog-te-gadget-icon
-      display: none
     a
       color: $text-color
       h5
@@ -51,7 +52,7 @@ html
       color: white
       background-color: $blue-color
 
-    font-family: 'PT Sans Caption'
+
 
     .content
       max-width: 1400px !important
