post small image border

--- a/client/pages/news/post.sass
+++ b/client/pages/news/post.sass
@@ -32,6 +32,9 @@
 
 .post-small
   .img-wrapper
+    border: 1px solid silver
+    display: flex
+    align-items: center
     height: 200px
     overflow: hidden
   .post-small-content
