--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -25,7 +25,7 @@ body
         .menu2
           width: $width-menu
           div
-            margin: 10px
+            margin: 10px 0
             padding: 10px
             background: linear-gradient(0deg, $blue-color 0%,  $blue-color2 100%)
             color: white
