--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -4,6 +4,9 @@ body
   .theme-main
     background-color: white
     color: $blue-color
+    .header
+      img
+        transform: scaleX(-1)
     @media screen and (max-width: $width-main)
       a
         text-decoration: underline
