--- a/views/share.pug
+++ b/views/share.pug
@@ -1,9 +1,8 @@
 html
 	head
-		meta( name="viewport" content="width={width},initial-scale=1")
-		meta( data-n-head="true" data-hid="og-title" name="og:title" content=header)
-		meta( data-n-head="true" data-hid="og-description" name="og:description" content=text)
-		meta( data-n-head="true" data-hid="og-image" name="og:image" content=image)
+		meta( property="og:title" content=header)
+		meta( propery="og:description" content=text)
+		meta( property="og:image" content=image)
 	body
 		script.
 			document.location.href = '#{url}'
