--- a/client/components/themes/main/theme-main.sass
+++ b/client/components/themes/main/theme-main.sass
@@ -27,13 +27,17 @@ body
         display: flex
         .menu2
           width: $width-menu
-          div
+          div.menu
             margin: 10px 0
             padding: 10px
             background: linear-gradient(0deg, $blue-color 0%,  $blue-color2 100%)
             color: white
             a
               color: white
+          div.plain
+            margin: 0
+            padding: 0
+            background: none
         .content
           width: $width-main - $width-menu
       .header
